fix background color for better visibility of text

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,3 +19,9 @@
 .v8-wrapper{
   background: #ef5350; width: 43%; font-size: 4rem; text-align: left; padding: 15px; position: absolute; top: 0; left: 198px; z-index: -1; height: 180px;
 }
+.slide-background{
+  background-color: rgba(0,0,0,0.5) !important;
+}
+.slide-background .slide-background{
+  background-color: transparent !important;
+  }
